syntax = "proto3";

package notification.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

option go_package = "git.ebondhm.com/ebond-infra/ealert/api/gen/v1;notificationpb";

// 业务类型
enum Business {
  // 未指定业务类型
  Business_UNSPECIFIED = 0;
  // 告警消息
  ALERT = 1;
  // 工单消息
  TICKET = 2;
}

// 渠道类型枚举
enum Channel {
  // 未指定渠道
  CHANNEL_UNSPECIFIED = 0;
  // 短信
  FEISHU_CARD = 1;
  // 邮件
  EMAIL = 2;
  // 站内信
  IN_APP = 3;
}

// 通知发送状态枚举
enum SendStatus {
  // 未指定通知发送状态
  SEND_STATUS_UNSPECIFIED = 0;
  // 事务消息，准备阶段
  PREPARE = 1;
  // 事务消息，取消发送
  CANCELED = 2;
  // 等待发送，普通消息的默认状态，事务消息的确认发送状态（二者重合故用一个状态表示）
  PENDING = 3;
  // 发送成功
  SUCCEEDED = 4;
  // 发送失败
  FAILED = 5;
}

// 错误代码枚举
enum ErrorCode {
  // 未指定错误码
  ERROR_CODE_UNSPECIFIED = 0;
  // 无效参数
  INVALID_PARAMETER = 1;
  // 频率限制
  RATE_LIMITED = 2;
  // 模板未找到
  TEMPLATE_NOT_FOUND = 3;
  // 渠道被禁用
  CHANNEL_DISABLED = 4;
  // 创建通知失败
  CREATE_NOTIFICATION_FAILED = 5;
  // 业务ID未找到
  BIZ_ID_NOT_FOUND = 6;
  // 通知未找到
  NOTIFICATION_NOT_FOUND = 7;
  // 无可用供应商
  NO_AVAILABLE_PROVIDER = 8;
  // 无可用渠道
  NO_AVAILABLE_CHANNEL = 9;
  // 发送通知失败
  SEND_NOTIFICATION_FAILED = 10;
  // 业务配置不存在
  CONFIG_NOT_FOUND = 11;
  // 没有提供配额相关配置
  NO_QUOTA_CONFIG = 12;
  // 额度已用完
  NO_QUOTA = 13;
  // 额度记录不存在
  QUOTA_NOT_FOUND = 14;
  // 供应商记录不存在
  PROVIDER_NOT_FOUND = 15;
  // 未知渠道类型
  UNKNOWN_CHANNEL = 16;
}


service NotificationService {
  // 同步单条发送
  rpc SendNotification(SendNotificationRequest) returns (SendNotificationResponse);
}

// 通知
message Notification {
  Business biz_id = 1;
  // 业务方某个业务内部的唯一标识
  string key = 2;
  // 接收者标识(可以是用户ID、邮箱、手机号等)
  repeated string receivers = 3;
  // 发送渠道
  Channel channel = 4;
  // 模板ID
  int64 template_id = 5;
  // 模版集合 ID, 如果传递集合优先通过集合查找
  int64 template_set_id = 6;
  // 模板参数
  google.protobuf.Struct template_params = 7;
}

// 同步单条发送通知请求
message SendNotificationRequest {
  Notification notification = 1;
}

// 同步单条发送通知响应
message SendNotificationResponse {
  // 通知平台生成的通知ID
  uint64 notification_id = 1;
  // 发送状态
  SendStatus status = 2;
  // 失败时的错误代码
  ErrorCode error_code = 3;
  // 错误详情
  string error_message = 4;
}


// 同步批量发送通知请求
message BatchSendNotificationsRequest {
  repeated Notification notifications = 1;
}

// 同步批量发送通知响应
message BatchSendNotificationsResponse {
  // 所有结果
  repeated SendNotificationResponse results = 1;
  // 总数
  int32 total_count = 2;
  // 成功数
  int32 success_count = 3;
}